# Team_1

./: .gitignore  README.md  work_summary_2025-12-13.txt
backend/: .env.example  pyproject.toml
backend/alembic/versions/: 2a349288b005_add_base_xp_reward_to_routes.py  b02874b51238_add_elevation_to_routes.py  b3673a4d0cc8_add_location_to_routes.py
backend/app/: __init__.py  logger.py  main.py  settings.py  supabase.py
backend/app/api/: __init__.py  schemas.py
backend/app/api/v1/: __init__.py  profiles.py  routes.py  sample.py
backend/app/models/: entities.py
backend/app/services/: __init__.py  genai_service.py  llm.py  recommendation_service.py
backend/scripts/: calculate_route_xp.py  check_generated_stories.py  enrich_outdooractive_tags.py  export_outdooractive_pois.py  import_outdooractive_routes.py
docs/: architecture.md
frontend/: README.md
frontend/components/: hiking-simulator.tsx  route-detail-modal.tsx  route-recommendations.tsx  user-profile-modal.tsx
frontend/lib/: api-client.ts  api-transforms.ts  api-types.ts  logger.ts  mock-data.ts
scripts/: dev.sh
