[tool.poetry]
name = "rec-lab-backend"
version = "0.1.0"
description = "FastAPI backend scaffold for the Rec Lab project."
authors = ["Rec Lab Team <team@example.com>"]
readme = "../README.md"
packages = [{ include = "app", from = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic = "^2.9.0"
supabase = "^2.4.0"
httpx = "^0.27.0"
openai = "^1.50.0"
# add huggingface-hub when implementing Hugging Face client

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
ruff = "^0.6.0"
pre-commit = "^3.8.0"

[tool.poetry.scripts]
rec-lab-api = "app.main:create_app"

[build-system]
requires = ["poetry>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]

